--- a/css/dashbordPartenaire.css
+++ b/css/dashbordPartenaire.css
@@ -17,7 +17,7 @@ body {
 
 .sidebar {
     width: 250px;
-    background-color: #001f3f; /* Bleu nuit */
+    background-color: #4A4A9E; /* Bleu principal */
     color: white;
     padding: 20px;
     display: flex;
@@ -44,7 +44,7 @@ body {
 }
 
 .sidebar ul li a:hover {
-    color: #39a078; /* Vert olive */
+    color: #F16529; /* Orange */
 }
 
 .main-content {
@@ -57,7 +57,7 @@ body {
 }
 
 h1, h2 {
-    color: #001f3f;
+    color: #4A4A9E;
 }
 
 .dashboard-cards {
@@ -77,12 +77,12 @@ h1, h2 {
 .card h2 {
     font-size: 1.4rem;
     margin-bottom: 10px;
-    color: #39a078; /* Vert olive */
+    color: #F16529; /* Orange */
 }
 
 .card p {
     font-size: 2rem;
-    color: #001f3f;
+    color: #4A4A9E;
 }
 
 .product-form {
@@ -92,7 +92,7 @@ h1, h2 {
 
 .product-form label {
     margin-bottom: 5px;
-    color: #001f3f;
+    color: #4A4A9E;
 }
 
 .product-form input, 
@@ -121,7 +121,7 @@ h1, h2 {
 }
 
 .styled-table thead tr {
-    background-color: #001f3f; /* Bleu nuit */
+    background-color: #4A4A9E; /* Bleu */
     color: #ffffff;
 }
 
@@ -134,11 +134,11 @@ h1, h2 {
 }
 
 .styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #001f3f;
+    border-bottom: 2px solid #4A4A9E;
 }
 
 .btn-primary {
-    background-color: #39a078; /* Vert olive */
+    background-color: #4A4A9E; /* Bleu */
     color: white;
     border: none;
     padding: 10px 20px;
@@ -149,5 +149,20 @@ h1, h2 {
 }
 
 .btn-primary:hover {
-    background-color: #2e815f;
+    background-color: #3e3e84;
+}
+
+.btn-danger {
+    background-color: #F16529; /* Orange */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1rem;
+    margin: 5px 0;
+}
+
+.btn-danger:hover {
+    background-color: #d55322;
 }
